
package modelo.enums;

public enum TipoCuenta {
    CORRIENTE, AHORROS, CREDITO
}
