
package modelo.enums;

public enum Turno {
    MAÑANA, TARDE, NOCHE
}
