/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.sistemabancariodemo.modelo.interfacee;

/**
 *
 * @author Dell
 */
//j
//1.INTERFACE-CONSULTABLE
public interface Consultable {
    
    public String ObtenerResumen();
    
    public boolean EstaActivo();
    
    public String ObtenerTipo();
}
