@startuml diagrama-clases
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "modelo.interfaces" {
    interface Consultable {
        + obtenerResumen() : String
        + estadoActivo() : boolean
        + obtenerTipo() : String
    }

    interface Transaccionable {
        + depositar(monto: double) : void
        + retirar(monto: double) : void
        + calcularComision(monto: double) : double
        + consultarSaldo() : double
    }

    interface Auditable {
        + obtenerFechaCreacion(): LocalDateTime
        + obtenerUltimaModificacion(): LocalDateTime
        + obtenerUsuarioModificacion(): String
        + registrarModificacion(usuario: String): void
    }

    interface Notificable {
        + notificar(mensaje: String): void
        + obtenerContacto(): String
        + aceptoNotificaciones(): boolean
    }
}

package "modelo.enums" {
    enum EstadoTransaccion {
        PENDIENTE
        PROCESANDO
        COMPLETADA
        RECHAZADA
        REVERTIDA
    }

    enum TipoCuenta {
        CORRIENTE
        AHORRO
        CREDITO
    }

    enum Turno {
        MAÑANA
        TARDE
        NOCHE
    }

    enum TipoDocumento {
        CELUDA
        PASAPORTE
        NIT
        CELUDA_EXTRANJERIA
    }
}

package "modelo.excepciones" {
    class Excepcion <<checked>>
    class RuntimeExcepcion <<unchecked>>

    class SistemaBancarioException {
        - codigoError: String
        - timestamp: LocalDateTime
        + toString(): String
    }

    class BancoRuntimeException {
        + toString(): String
    }

    Excepction <|-- SistemaBancarioException
    SistemaBancarioException <|-- SaldoInsuficienteException
    SitemaBancarioException <|-- CuentaBloqueadaException
    SistemaBancarioException <|-- ClienteNoEncontradoException
    SistemaBancarioException <|-- CapacidadExcedidaException

    RuntimeExcepcion <|-- BancoRuntimeException
    BancoRuntimeException <|-- DatoInvalidoException
    BancoRuntimeException <|-- EstadoTransaccionInvalidaException
    BancoRuntimeException <|-- PermisoInsuficienteException

    SaldoInsuficienteException: - saldoActual: double
    SaldoInsuficienteException: - montoSolicitado: double
    ClienteNoEncontradoException: - idCliente: String 
    CapacidadExcedidaException: - campo: String 
    DatoInvalidoException: - valorRecibido: String
}

package "modelo.abstractas" {
    abstract class Persona {
        - id: String
        - nombre: String
        - apellido: String
        - fechaNacimiento: LocalDate
        - email: String
        + {abstract} calcularEdad(): int
        + {abstract} obtenerTipoDocumento(): String
        + {abstract} obtenerDocumentoIdentidad(): String
        + getNombreCompleto(): String
    }

    abstract class Empleado {
        - legajo: String
        - fechaContratacion: LocalDate
        + {abstract} calcularSalario(): double
        + {abstract} calcularBono(): double
        + calcularAntiguedad(): int
    }

    abstract class Cuenta {
        - numeroCuenta: String
        - saldo: double
        - bloqueada: boolean
        - fechaCreacion: LocalDateTime
        - ultimaModificacion: LocalDateTime
        - usuarioModificacion: String
        - {static} historial: Transaccion[20]
        + {abstract} calcularInteres(): double
        + {abstract} getLimiteRetiro(): double
        + {abstract} getTipoCuenta(): String
        + verificarBloqueada(): void
        + agregarAlHistorial(t: Transaccion): void
        + getHistorial(): Transaccion[]
    }

    Persoan <|-- Empleado
}

package "modelo.personas" {
    class ClienteNatural {
        - tipoDocumento: TipoDocumento
        - numeroDocumento: String
        - cuentas: cuenta[5]
    }

    class ClienteEmpresarial {
        - nit: String
        - razonSocial: String
        -representacionLegal: String
        - cuentas: Cuenta[5]
    }

    Persona <|-- ClienteNatural
    Persona <|-- ClienteEmpresarial
}

package "modelo.empleados" {
    class Cajero {
        - turno: Turno
        - sucursalAsignada: String
        - transaccionnesDia: int
    }

    class AsesorFinanciero {
        - comisionBase: double
        - metasMensuales: double
        - clientesAsignados: ClienteNatural[20]
    }

    class GerenteSucursal {
        - sucursal: String
        - presupuestoMensual: double
        - empleadosACargo: Empleado[30]
        + aprobarCredito(): void
    }

    Empleado <|-- Cajero
    Empleado <|-- AsesorFinanciero
    Empleado <|-- GerenteSucursal
}

